docs/gamma/4.12/api-management/build/configure-your-api-proxy/configure-notifications.md
---
description: >-
  Send console, email, or webhook alerts when API events occur, such as a
  deployment or a subscription change. Follow the steps to add a notification.
---

# Configure notifications

The **Notifications** page alerts you when key API events occur, for example deployments, subscription changes, or policy errors. Each notification pairs a channel with a set of API events that trigger it.

To open the page, follow these steps:

1. Click **API Proxies** in the module sidebar.
2. Select your API proxy.
3. Click **Notifications** in the API proxy sidebar.

The page shows the **Console notifiers**, **Email notifiers**, and **Webhook notifiers** counters, and a table with the **Name**, **Channel**, **Events**, and **Target** columns.

## Add a notification

To add an email or webhook notification, follow these steps:

1. Click **Add notification**.
2. Enter a **Name**.
3. Select a **Channel**. The channel sets the target field: `Email address(es)` for the **Email** channel, or **Webhook URL** for the **Webhook** channel.
4. For a webhook, optionally turn on **Use system proxy** to route webhook calls through the gateway's configured system proxy.
5. Under **Events**, select the API events that send a notification. Events are grouped by category.
6. Click **Add notification**.

{% hint style="info" %}
The **Console** channel isn't created from this form. Edit the console notification from the notifications list to choose which events appear in the console.
{% endhint %}

## Edit or delete a notification

To change a notification, open it from the table and adjust its target or its selected events. The channel of an existing notification can't be changed.

To delete a notification, use its **Actions** menu in the table. The **Delete notification** dialog warns that the notification is permanently deleted, and the action can't be undone.

## Verification

To verify a notification is working as expected, follow these steps:

1. Add a notification for an event you control, for example an API deployment event.
2. Trigger the event by deploying the API.
3. The notification arrives on the configured channel.
